--- a/assets/app/hesaa-homepage.css
+++ b/assets/app/hesaa-homepage.css
@@ -1624,5 +1624,8 @@
 #translate-pop iframe { max-width: 100% !important; } /* if Google injects an iframe in some locales */
 #gt-container select {
     width: 100% !important;
-    border: 1px solid black;
+    border: 1px solid black !important;
+}
+#targetLanguage{
+  border: 1px solid black !important;
 }
